--- a/ShareHub/website/templates/base.html
+++ b/ShareHub/website/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ShareHub | Système de partage de fichiers</title>
+    <title>{% block title %}ShareHub | Système de partage de fichiers{% endblock %}</title>
 
     <meta content="" name="description">
     <meta content="" name="keywords">
@@ -24,9 +24,33 @@
      <link href="../static/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
      <!-- Template Main CSS File -->
-     <link href="../static/css/style.css" rel="stylesheet">
+     <link href="../static/style.css" rel="stylesheet">
 </head>
 <body>
+    <!-- ======= Mobile nav toggle button ======= -->
+    <!--<button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button>-->
+    <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
+
+    <!-- ======= Header ======= -->
+    <header id="header" class="d-flex flex-column justify-content-center">
+    <nav id="navbar" class="navbar nav-menu">
+      <ul>
+        <li><a href="/" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Acceuil</span></a></li>
+        <li><a href="/login" class="nav-link scrollto"><i class="bi bi-box-arrow-in-right"></i> <span>Se connecter</span></a></li>
+        <li><a href="/logout" class="nav-link scrollto"><i class="bi bi-box-arrow-right"></i> <span>Se déconnecter</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
+  </header><!-- End Header -->
+
+ <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex flex-column justify-content-center">
+    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+      <h1>ShareHub</h1>
+      <p>Système de partage de fichiers pour les entreprises ETTIAM & INNOVE CORP</p>
+    </div>
+  </section><!-- End Hero -->
+
+
 
 </body>
 </html>
