--- a/ShareHub/website/templates/home.html
+++ b/ShareHub/website/templates/home.html
@@ -1,1 +1,9 @@
 {% extends "base.html" %}
+{% block content%}
+  <section id="hero" class="d-flex flex-column justify-content-center">
+    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+      <h1>ShareHub</h1>
+      <p>Système de partage de fichiers pour les entreprises ETTIAM & INNOVE CORP</p>
+    </div>
+  </section>
+{% endblock %}
