--- a/ShareHub/website/templates/base.html
+++ b/ShareHub/website/templates/base.html
@@ -28,27 +28,56 @@
 </head>
 <body>
     <!-- ======= Mobile nav toggle button ======= -->
-    <!--<button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button>-->
-    <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
-
+        <!--<button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button>-->
+        <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
     <!-- ======= Header ======= -->
-    <header id="header" class="d-flex flex-column justify-content-center">
-    <nav id="navbar" class="navbar nav-menu">
-      <ul>
-        <li><a href="/" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Acceuil</span></a></li>
-        <li><a href="/login" class="nav-link scrollto"><i class="bi bi-box-arrow-in-right"></i> <span>Se connecter</span></a></li>
-        <li><a href="/logout" class="nav-link scrollto"><i class="bi bi-box-arrow-right"></i> <span>Se déconnecter</span></a></li>
-      </ul>
-    </nav><!-- .nav-menu -->
-  </header><!-- End Header -->
+        <header id="header" class="d-flex flex-column justify-content-center">
+        <nav id="navbar" class="navbar nav-menu">
+          <ul>
+            <li><a href="/" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Acceuil</span></a></li>
+            <li><a href="/login" class="nav-link scrollto"><i class="bi bi-box-arrow-in-right"></i> <span>Se connecter</span></a></li>
+            <li><a href="/logout" class="nav-link scrollto"><i class="bi bi-box-arrow-right"></i> <span>Se déconnecter</span></a></li>
+          </ul>
+        </nav><!-- .nav-menu -->
+      </header><!-- End Header -->
+    <!-- ======= Hero Section ======= -->
+    <div class="container">{%block content %} {%endblock%}</div>
+    <!-- End Hero -->
 
- <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>ShareHub</h1>
-      <p>Système de partage de fichiers pour les entreprises ETTIAM & INNOVE CORP</p>
-    </div>
-  </section><!-- End Hero -->
+    <!-- ======= Footer ======= -->
+      <footer id="footer">
+        <div class="container">
+          <h3>Share and Go</h3>
+          <p>Système de partage de fichiers de l'entreprise ETTIAM</p>
+          <div class="copyright">
+            &copy; Copyright <strong><span>ETTIAM</span></strong>. Tous droits réservés
+          </div>
+          <div class="credits">
+            Designed by <a href="https://chainerkomissa.github.io/">Chainer KOMISSA ZOTSU</a>
+          </div>
+        </div>
+      </footer><!-- End Footer -->
+
+
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="../static/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../static/vendor/aos/aos.js"></script>
+  <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../static/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../static/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../static/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../static/vendor/typed.js/typed.umd.js"></script>
+  <script src="../static/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="../static/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="../static/main.js"></script>
+
+
+
 
 
 
