--- a/ShareHub/website/templates/base.html
+++ b/ShareHub/website/templates/base.html
@@ -40,6 +40,32 @@
           </ul>
         </nav><!-- .nav-menu -->
       </header><!-- End Header -->
+
+
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                {% if category == 'error' %}
+                    <div class="alert alert-danger alert-dismissable fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% else %}
+                    <div class="alert success alert-dismissable fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
+
     <!-- ======= Hero Section ======= -->
     <div class="container">{%block content %} {%endblock%}</div>
     <!-- End Hero -->
