--- a/ShareHub/website/templates/login.html
+++ b/ShareHub/website/templates/login.html
@@ -11,7 +11,7 @@
           <formgroup class="mb-3">
             <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email" name="email" required>
-            <small class="small">Veuillez entrer votre mail de connexion ETTIAM</small>
+            <small class="small">Veuillez entrer votre mail de connexion ETTIAM (prenom.nom@ettiam.com)</small>
           </formgroup><br><br>
           <formgroup class="mb-3">
             <label for="password" class="form-label">Mot de passe</label>
