--- a/ShareHub/website/templates/files.html
+++ b/ShareHub/website/templates/files.html
@@ -20,9 +20,7 @@
               <a href="/upload" type="button" class="btn btn-outline-primary">Déposer un nouveau fichier</a>
             </div>
         </div><br>
-      <div class="row">
-
-
+      <div class="row fichiers">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-blue">
               <div class="icon">
