--- a/ShareHub/templates/base.html
+++ b/ShareHub/templates/base.html
@@ -54,7 +54,7 @@
                         </button>
                     </div>
                 {% else %}
-                    <div class="alert success alert-dismissable fade show" role="alert">
+                    <div class="alert alert-success alert-dismissable fade show" role="alert">
                         {{ message }}
                         <button type="button" class="close" data-dismiss="alert">
                             <span aria-hidden="true">&times;</span>
