--- a/ShareHub/templates/base.html
+++ b/ShareHub/templates/base.html
@@ -73,8 +73,8 @@
     <!-- ======= Footer ======= -->
       <footer id="footer">
         <div class="container">
-          <h3>Share and Go</h3>
-          <p>Système de partage de fichiers de l'entreprise ETTIAM</p>
+          <h3>ShareHub</h3>
+          <p>Application de partage de fichiers de l'entreprise ETTIAM</p>
           <div class="copyright">
             &copy; Copyright <strong><span>ETTIAM</span></strong>. Tous droits réservés
           </div>
