--- a/ShareHub/templates/files.html
+++ b/ShareHub/templates/files.html
@@ -31,10 +31,10 @@
                 </svg>
                 <i class="bi {{ fichier['icon_class'] }}"></i>
               </div>
-              <h4><a href="">{{ fichier[1] }}</a></h4>
-              <p>{{ fichier[2] }}</p>
+              <h4><a href="">{{ fichier['namefile'] }}</a></h4>
+              <p>{{ fichier['description'] }}</p>
                 <div class="bottom">
-                    <a href=""><i class="bi bi-calendar"></i>{{ fichier[4] }}</a>
+                    <a href=""><i class="bi bi-calendar"></i></a>
                 </div>
             </div>
           </div>
