--- a/ShareHub/static/style.css
+++ b/ShareHub/static/style.css
@@ -400,10 +400,16 @@ section {
   position: relative;
 }
 
+
 .services .icon-box .icon i {
   font-size: 36px;
   transition: 0.5s;
   position: relative;
+  fill:#f5f5f5;
+}
+
+.services .icon-box .icon:hover svg {
+  fill:inherit;
 }
 
 .services .icon-box .icon svg {
@@ -488,6 +494,13 @@ section {
   fill: #000;
 }
 
+.file-services .icon-box {
+  text-align: center;
+  padding: 70px 20px 80px 20px;
+  transition: all ease-in-out 0.3s;
+  background: #fff;
+  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
+}
 
 .haut {
     display : flex;
