--- a/ShareHub/static/style.css
+++ b/ShareHub/static/style.css
@@ -381,13 +381,23 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
-.services .icon-box {
-  text-align: center;
-  padding: 70px 20px 80px 20px;
-  transition: all ease-in-out 0.3s;
-  background: #fff;
-  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
+.services .fichiers {
+    display : flex;
+    flex-wrap : wrap;
 }
+
+.services .icon-box {
+  background: #fff;
+  border-radius : 10px;
+  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
+  width :  46%;
+  height : 300px;
+  margin : 15px;
+  text-align: center;
+  transition: all ease-in-out 0.3s;
+  border : 2px solid #fff;
+}
+
 
 .services .icon-box .icon {
   margin: 0 auto;
@@ -399,7 +409,6 @@ section {
   transition: ease-in-out 0.3s;
   position: relative;
 }
-
 
 .services .icon-box .icon i {
   font-size: 36px;
@@ -420,7 +429,6 @@ section {
 
 .services .icon-box .icon svg path {
   transition: 0.5s;
-  fill: #f5f5f5;
 }
 
 .services .icon-box h4 {
@@ -455,51 +463,6 @@ section {
 
 .services .iconbox-blue:hover .icon path {
   fill: #47aeff;
-}
-
-.services .iconbox-orange i {
-  color: #ffa76e;
-}
-
-.services .iconbox-orange:hover .icon i {
-  color: #fff;
-}
-
-.services .iconbox-orange:hover .icon path {
-  fill: #ffa76e;
-}
-
-
-.services .iconbox-red i {
-  color: #ff5828;
-}
-
-.services .iconbox-red:hover .icon i {
-  color: #fff;
-}
-
-.services .iconbox-red:hover .icon path {
-  fill: #ff5828;
-}
-
-.services .iconbox-black i {
-  color: #000;
-}
-
-.services .iconbox-black:hover .icon i {
-  color: #fff;
-}
-
-.services .iconbox-black:hover .icon path {
-  fill: #000;
-}
-
-.file-services .icon-box {
-  text-align: center;
-  padding: 70px 20px 80px 20px;
-  transition: all ease-in-out 0.3s;
-  background: #fff;
-  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
 }
 
 .haut {
