--- a/ShareHub/templates/files.html
+++ b/ShareHub/templates/files.html
@@ -35,8 +35,8 @@
                 <div class="row">
                     <div class="col">
                     <a href=""><i class="bi bi-file-earmark" style="color : #4E4E4D"></i></a>&nbsp;&nbsp;
-                    <a href=""><i class="bi bi-pencil-square" style="color : #4E4E4D"></i></a>&nbsp;&nbsp;
-                    <a href=""><i class="bi bi-trash3" style="color : red"></i></a>
+                    <a href=""><i class="bi bi-pencil-square" style="color : #4E4E4D"></i></a>
+                    <form method="POST", action="{{ url_for('delete', user_id = user_id, file_id = fichier['id']) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce fichier ?')"><button type="submit" style="border : none; background-color : #fff"><i class="bi bi-trash3" style="color : red"></i></button></form>
                 </div>
                 <div class="col"><a href="{{ fichier['linkfile'] }}" target="_blank"><i class="bi bi-download" alt="Télécharger" style="color : #4E4E4D"></i></a></div>
                 </div>
