--- a/ShareHub/templates/base.html
+++ b/ShareHub/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}ShareHub | Système de partage de fichiers{% endblock %}</title>
+    <title>{% block title %}ShareHub | Application de partage de fichiers{% endblock %}</title>
 
     <meta content="" name="description">
     <meta content="" name="keywords">
