--- a/ShareHub/templates/home.html
+++ b/ShareHub/templates/home.html
@@ -3,7 +3,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>ShareHub</h1>
-      <p>Système de partage de fichiers pour les entreprises ETTIAM & INNOVE CORP</p>
+      <p>Application de partage de fichiers pour les entreprises ETTIAM & INNOVE CORP</p>
     </div>
   </section>
 {% endblock %}
